Fixed layout issues

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -93,16 +93,16 @@ html, body {
 	flex: 12;
 }
 .flex-shrink-0 {
-	flex-shrink: 0;
+	flex-shrink: 0!important;
 }
 .flex-shrink-1 {
-	flex-shrink: 1;
+	flex-shrink: 1!important;
 }
 .flex-grow-1 {
-	flex-grow: 1;
+	flex-grow: 1!important;
 }
 .flex-grow-0 {
-	flex-grow: 0;
+	flex-grow: 0!important;
 }
 .border-gray-left {
 	border-left: 1px solid #E0E0E0;
